Fix low-contrast syntax highlighting via `accessible-pygments` and harsher backgrounds (#1749)
This PR (finally?) fixes color contrast issues with our syntax highlighting theme (on both light and dark color schemes). It does so by using the github-light and github-dark pygments themes from [Quansight-Labs' accessible-pygments project](https://github.com/Quansight-Labs/accessible-pygments/tree/main) (instead of OneLightJekyll and OneDarkJekyll), which:

- pick stronger colors that contrast against backgrounds
- use "harsher" backgrounds, especially for light mode (which is hard to do against white)

To still make code blocks visually distinctive, I then add a text-color border (with a short radius) over each code block, and do the same for our copy code button (as well as adding a proper focus indicator). I also do some testing with line numbers enabled to ensure that core functionality isn't broken.

This should:

- resolve all open syntax highlighting-related color contrast issues
- make it easier for other folks to make their own accessible color schemes

However, there are still some accessibility issues with some features:

- the copy code button needs a distinctive title (?) or some other way to disambiguate the multiple "copy code" buttons on one screen
- the markup for line numbers has many issues, including its use of tables. Need to explore a longer-term solution (that will likely be *very* breaking).

Note that this is a breaking change for those who have made a custom theme that imports either OneLightJekyll or OneDarkJekyll, as those files have been deleted. I'll add steps to the migration guide.

---

The line numbers styling overall still needs some work. Perhaps a rework is needed?

--- a/_sass/color_schemes/dark.scss
+++ b/_sass/color_schemes/dark.scss
@@ -7,12 +7,12 @@ $nav-child-link-color: $grey-dk-000;
 $sidebar-color: $grey-dk-300;
 $base-button-color: $grey-dk-250;
 $btn-primary-color: $blue-200;
-$code-background-color: #31343f; // OneDarkJekyll default for syntax-one-dark-vivid
-$code-linenumber-color: #dee2f7; // OneDarkJekyll .nf for syntax-one-dark-vivid
+$code-background-color: #0d1117; // github-dark bg color
+$code-linenumber-color: #e6edf3; // github-dark line number color
 $feedback-color: darken($sidebar-color, 3%);
 $table-background-color: $grey-dk-250;
 $search-background-color: $grey-dk-250;
 $search-result-preview-color: $grey-lt-300;
 $border-color: $grey-dk-200;
 
-@import "./vendor/OneDarkJekyll/syntax"; // this is the one-dark-vivid atom syntax theme
+@import "./vendor/accessible-pygments/github-dark";
